--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
     position: absolute;
     top: 0;
     left: 0%;
+    z-index: 1000;
 }
 
 
@@ -32,6 +33,7 @@ body {
     background-color: aqua;
     background-image: url("../images/background.png");
     background-size: cover;
+    z-index: -110;
 }
 
 /* add styles for other HTML elements of your game */
