--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
     align-items: center;
     height: 95vh;
     background-color: #333333;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #gameContainer {
     width: 1280px;
