--- a/Game/css/style.css
+++ b/Game/css/style.css
@@ -94,3 +94,44 @@ body {
 #skipCutscene:hover{
     background-color: #555;
 }   
+
+#levelCompleteScreen{
+    position: fixed;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    gap: 20px;
+    z-index: 1000;
+    width: 1280px;
+    height: 720px;
+    background-color: #00000087;
+    font-size: 50px;
+    color: red;
+    background-image: url(../images/background.png);
+    background-clip: border-box;
+}
+
+#levelCompleteScreen button {
+    width: 200px;
+    height: max-content;
+    font-size: 30px;
+    padding: 10px 20px;
+    background-color: #333;
+    color: white;
+    border: #000 solid 1px;
+    cursor: pointer;
+    margin-left: 500px;
+}
+
+#levelCompleteScreen button:hover {
+    background-color: #555;
+}
+
+#levelCompleteScreen img {
+    position: absolute;
+    width: 100%;
+    height:100%;
+    z-index: -1;
+
+}
