--- a/Game/css/style.css
+++ b/Game/css/style.css
@@ -108,13 +108,14 @@ body {
     background-color: #00000087;
     font-size: 50px;
     color: red;
-    background-image: url(../images/background.png);
-    background-clip: border-box;
+    background-image: url(../images/LevelComplete.png);
+    background-size: cover;
+
+    
 }
 
 #levelCompleteScreen button {
     width: 200px;
-    height: max-content;
     font-size: 30px;
     padding: 10px 20px;
     background-color: #333;
@@ -122,6 +123,7 @@ body {
     border: #000 solid 1px;
     cursor: pointer;
     margin-left: 500px;
+    transform:translateY(100px);
 }
 
 #levelCompleteScreen button:hover {
