--- a/style.css
+++ b/style.css
@@ -41,10 +41,12 @@ html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 20px;
+
 }
 
 .menu button {
-    width: max-content;
+    width: 300px;
 }
 
 .menu:hover>img {
@@ -91,4 +93,23 @@ button:disabled {
     /* Optional: Centers items vertically */
 
 
+}
+
+#gameGuide{
+    display: none;
+    flex-direction: column;
+    transform: translateY(50px);
+    width: 680px;
+    text-align: center;
+    padding: 10px;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.6);
+    color: var(--btn-text);
+    font-size: 1.4rem;
+    font-family: "CommodoreAngled";
+
+}
+
+#backBtn{
+align-self: end;
 }
