--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "CommodoreAngled";
-    src: url('./stuff/CommodoreAngled.ttf') format('truetype');
+    src: url('./assets/CommodoreAngled.ttf') format('truetype');
 }
 
 :root {
@@ -26,7 +26,7 @@ html {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(stuff/cover.png);
+    background-image: url(./assets/cover.png);
     background-size: cover;
     background-position: center;
 }
@@ -34,7 +34,7 @@ html {
 .menu {
     text-align: center;
     /* background: rgba(0, 0, 0, 0.5); */
-    filter: url(#noise);
+    /* filter: url(#noise); */
     padding: 20px;
     border-radius: 10px;
     display: flex;
@@ -49,10 +49,10 @@ html {
     width: 300px;
 }
 
-.menu:hover>img {
+/* .menu:hover>img {
     animation: pulse 800ms ease-in-out;
     filter: url(#noise);
-}
+} */
 
 .menu h1 {
     color: var(--btn-text);
@@ -79,20 +79,14 @@ button:disabled {
     background-color: var(--btn-disabled);
 }
 
-
 #levelSelectMenu {
     display: none;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     flex-direction: column;
     gap: 10px;
-    /* Optional: Adds space between grid items */
     justify-items: center;
-    /* Optional: Centers items horizontally */
     align-items: center;
-    /* Optional: Centers items vertically */
-
-
 }
 
 #gameGuide{
@@ -107,7 +101,6 @@ button:disabled {
     color: var(--btn-text);
     font-size: 1.4rem;
     font-family: "CommodoreAngled";
-
 }
 
 #backBtn{
